# gb-emulator

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp
android-project/: local.properties
core/: CMakeLists.txt
core/include/: apu.h  apu_utils.h  bus.h  cpu.h  dma.h  emu.h  hdma.h  interrupts.h  io.h  joypad.h  lcd.h  noise_channel.h  platform.h  ppu.h  ppu_sm.h  ram.h  serial.h  square_channel.h  wave_channel.h
core/lib/: apu.cpp  apu_utils.cpp  bus.cpp  cpu_stack.cpp  dma.cpp  emu.cpp  hdma.cpp  instructions.cpp  interrupts.cpp  io.cpp  joypad.cpp  lcd.cpp  mbc1.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp  noise_channel.cpp  pixel_fifo.cpp  ppu.cpp  ppu_sm.cpp  ram.cpp  serial.cpp  square_channel.cpp  timer.cpp  wave_channel.cpp
gbemu/: main.cpp
include/: apu.h  bus.h  cart.h  common.h  cpu.h  cpu_stack.h  dbg.h  emu.h  instructions.h  interrupts.h  lcd.h  mbc1.h  mbc3.h  pixel_fifo.h  ppu.h  ppu_sm.h  ram.h  timer.h  ui.h
include/cartridge/: cart.h  constants.h  debug.h  read_file.h
lib/: CMakeLists.txt  apu.cpp  bus.cpp  cart.cpp  cpu.cpp  cpu_stack.cpp  cpu_utils.cpp  dbg.cpp  dma.cpp  emu.cpp  instructions.cpp  interrupts.cpp  io.cpp  joypad.cpp  lcd.cpp  mbc1.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp  pixel_fifo.cpp  ppu.cpp  ppu_sm.cpp  ram.cpp  serial.cpp  timer.cpp  ui.cpp
lib/cartridge/: cart.cpp  debug.cpp  logo_utils.cpp  read_file.cpp
lib/cpu/: cpu.cpp  cpu_fetch.cpp  cpu_proc.cpp  cpu_utils.cpp
platform/desktop/: CMakeLists.txt  desktop_audio.cpp  desktop_read_cart.cpp  desktop_save_data.cpp  desktop_ui.cpp  main.cpp
(+49 files in other folders)
